# khmerphonemizer

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: wheels.yml
examples/: single.py  text.py
khmerphonemizer/: __init__.py  g2p_phonetisaurus.c  g2p_phonetisaurus.py  g2p_phonetisaurus.pyx
