[build-system]
requires = [
    "setuptools==67.4.0",
    "setuptools-scm[toml]==7.1.0",
    "Cython==0.29.33",
    "khmercut",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "khmerphonemizer"
authors = [{ name = "Seanghay Yath", email = "seanghay.dev@gmail.com" }]
description = "A Free, Standalone and Open-Source Khmer Grapheme-to-Phonemes."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dynamic = ["version"]

[project.urls]
repository = "https://github.com/seanghay/khmerphonemizer"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["khmerphonemizer"]

[tool.setuptools.package-dir]
khmerphonemizer = "khmerphonemizer"

[tool.setuptools.package-data]

khmerphonemizer = [
    "km_phonemizer.npz",
    "km_lexicon.tsv",
    "g2p_phonetisaurus.pyx",
]
